# school-catering

backend/: dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/core/: __init__.py  config.py  database.py  dependecies.py  lifespan.py  security.py
backend/src/crud/: holiday.py  jwt.py  school_class.py  student.py  teacher.py  transferred_day.py  visit.py
backend/src/exceptions/: auth.py  jwt.py  school_class.py
backend/src/models/: class.py  holiday.py  jwt.py  school_class.py  student.py  teacher.py  transferred_day.py  visit.py
backend/src/repositories/: holiday_repository.py  jwt_repository.py  school_class_repository.py  student_repository.py  teacher_repository.py  transferred_day_repository.py  visit_repository.py
backend/src/routes/: auth.py  jwt.py  school_class.py  teacher.py  transferred_day.py  visit.py
backend/src/services/: auth_service.py  school_class_service.py  teacher_service.py  transferred_day_service.py  visit_service.py
