[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"

[tool.ruff.lint]
ignore = [
    "D",        # no docstrings
    "EM",       # exceptions strings
    "W29",      # whitespaces at the end
    "TRY",      # exception classes
    "ANN401",   # *args: Any
    "B008",     # depends
    "N818",     # exception suffix
    ]
    
select = ["ALL"]
